function(add_general_test target source)
  add_executable(${target} ${source})
  target_link_libraries(${target} PRIVATE GTest::gtest_main)
  target_include_directories(${target} PRIVATE ${PROJECT_SOURCE_DIR}/include)
  target_include_directories(${target} PRIVATE ${PROJECT_SOURCE_DIR}/lib)
  target_include_directories(${target} PRIVATE ${moodycamel_concurrentqueue_SOURCE_DIR})
  gtest_discover_tests(${target})
endfunction()

include(GoogleTest)

add_subdirectory(hazard_ptr)
add_subdirectory(lockfree_mpmc_queue)
add_subdirectory(mpmc_queue)
add_subdirectory(nano_utils)
